--- a/dynamodb/package.json
+++ b/dynamodb/package.json
@@ -7,6 +7,10 @@
     "url": "https://github.com/marciocadev/pj-winglib.git",
     "directory": "dynamodb"
   },
+  "author": {
+    "name": "Marcio Cruz de Almeida",
+    "email": "marciocadev@gmail.com",
+  },
   "wing": {
     "platforms": [
       "sim"
