--- a/checks/package.json
+++ b/checks/package.json
@@ -9,7 +9,7 @@
   },
   "author": {
     "name": "Marcio Cruz de Almeida",
-    "email": "marciocadev@gmail.com",
+    "email": "marciocadev@gmail.com"
   },
   "wing": {
     "platforms": [
