--- a/.github/workflows/checks-release.yml
+++ b/.github/workflows/checks-release.yml
@@ -11,7 +11,8 @@ on:
 jobs:
   build-checks:
     runs-on: ubuntu-latest
-    permissions: {}
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
