--- a/.github/workflows/dynamodb-release.yml
+++ b/.github/workflows/dynamodb-release.yml
@@ -11,7 +11,8 @@ on:
 jobs:
   build-dynamodb:
     runs-on: ubuntu-latest
-    permissions: {}
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
