--- a/.github/workflows/dynamodb-release.yml
+++ b/.github/workflows/dynamodb-release.yml
@@ -53,4 +53,4 @@ jobs:
           name: dynamodb v${{ env.WINGLIB_VERSION }}
           tag_name: dynamodb-v${{ env.WINGLIB_VERSION }}
           files: "*.tgz"
-          token: v${{ env.WINGLIB_VERSION }}
+          token: v${{ env.PROJEN_GITHUB_TOKEN }}
