--- a/.github/workflows/checks-release.yml
+++ b/.github/workflows/checks-release.yml
@@ -37,6 +37,8 @@ jobs:
       - name: Get package version
         run: echo WINGLIB_VERSION=$(node -p "require('./package.json').version") >> "$GITHUB_ENV"
         working-directory: checks
+      - name: Echo WINGLIB_VERSION
+        run: echo $WINGLIB_VERSION
       - name: Publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
