--- a/.github/workflows/checks-release.yml
+++ b/.github/workflows/checks-release.yml
@@ -38,7 +38,7 @@ jobs:
         run: echo WINGLIB_VERSION=$(node -p "require('./package.json').version") >> "$GITHUB_ENV"
         working-directory: checks
       - name: Echo WINGLIB_VERSION
-        run: echo $WINGLIB_VERSION
+        run: echo ${{ env.WINGLIB_VERSION }}
       - name: Publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
