--- a/.github/workflows/dynamodb-release.yml
+++ b/.github/workflows/dynamodb-release.yml
@@ -39,6 +39,8 @@ jobs:
         working-directory: dynamodb
       - name: Echo WINGLIB_VERSION
         run: echo ${{ env.WINGLIB_VERSION }}
+      - name: ls
+        run: ls -la
       - name: Publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
