--- a/.github/workflows/checks-release.yml
+++ b/.github/workflows/checks-release.yml
@@ -57,4 +57,4 @@ jobs:
           name: checks v${{ env.WINGLIB_VERSION }}
           tag_name: checks-v${{ env.WINGLIB_VERSION }}
           files: checks/*.tgz
-          token: v${{ env.PROJEN_GITHUB_TOKEN }}
+          token: ${{ env.PROJEN_GITHUB_TOKEN }}
