--- a/.github/workflows/dynamodb-release.yml
+++ b/.github/workflows/dynamodb-release.yml
@@ -34,6 +34,16 @@ jobs:
       - name: Pack
         run: wing pack
         working-directory: dynamodb
+      - name: Automated Version Bump
+        uses: phips28/gh-action-bump-version@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.PROJEN_GITHUB_TOKEN }}
+          PACKAGEJSON_DIR: '"dynamodb"'
+        with:
+          minor-wording: add,Adds,new
+          major-wording: MAJOR,cut-major
+          patch-wording: patch,fixes
+          rc-wording: RELEASE,alpha
       - name: Get package version
         run: echo WINGLIB_VERSION=$(node -p "require('./package.json').version") >> "$GITHUB_ENV"
         working-directory: dynamodb
